--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "RiwiHow", email = "53964574+RiwiHow@users.noreply.github.com"},
 ]
-dependencies = ["pynput>=1.7.7"]
+dependencies = ["pynput>=1.7.7", "pyinstaller>=6.11.1"]
 requires-python = "==3.12.*"
 readme = "README.md"
 license = {text = "MIT"}
