chore: error handling for config.json file

--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,8 @@
 {
     "screenshot_enable": true,
     "launch_balatro": false,
-    "key_mapping":
-    {
-        "backup": "[", 
+    "key_mapping": {
+        "backup": "[",
         "delete": "e",
         "select": "up",
         "load": "enter",
