--- a/src/config.json
+++ b/src/config.json
@@ -4,6 +4,10 @@
     "GUI": {
         "window_opacity": 0.8,
         "always_on_top": true,
+        "window_size": {
+            "width": 400,
+            "height": 150
+        },
         "window_position": {
             "x": 100,
             "y": 100
