--- a/src/config.json
+++ b/src/config.json
@@ -9,14 +9,14 @@
             "height": 240
         },
         "window_position": {
-            "x": 100,
-            "y": 100
+            "x": 2103,
+            "y": 600
         }
     },
     "key_mapping": {
         "backup": "[",
         "delete": "e",
-        "select": "up",
+        "select": "down",
         "load": "enter",
         "exit": "esc"
     }
